Testing potential fix for stretched content in iOS.

--- a/assets/css/storyteller/storyteller.css
+++ b/assets/css/storyteller/storyteller.css
@@ -922,4 +922,7 @@ table {
 
 /* mobile nav - all devices 959px and fewer */
 @media only screen and (max-width: 959px) {
+  * {
+    box-sizing: content-box
+  }
 }
